# Menudo

./: Cargo.toml  README
src/: lib.rs  main.rs
src/config/: backtest_config.rs  mod.rs
src/data/: bar.rs  loader.rs  mod.rs
src/engine/: backtest.rs  execution.rs  mod.rs
src/instrument/: futures_contract.rs  mod.rs
src/metrics/: mod.rs  summary.rs  timeseries.rs
src/portfolio/: account.rs  mod.rs  position.rs
src/strategy/: mod.rs  rsi_reversion.rs  sma_crossover.rs
