[package]
name = "menudo"
version = "1.0.0"
edition = "2021"
authors = ["tiramisu"]
description = "a Rust-based strategy backtesting engine for futures contracts"
license = "MIT"

[[bin]]
name = "menudo"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
anyhow = "1"
statrs = "0.16"
rayon = "1"
prettytable-rs = "0.10"
indexmap = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

